# esp32_mouse_keyboard

./: CMakeLists.txt  Kconfig  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_dev.c  hid_dev.h  hid_device_le_prf.c  hid_device_le_prf.h  hid_mem.c  hid_mem.h  hidd_le_prf_int.h
